<resources>
    <string name="app_name">Here</string>
    <string name="login_name">Hello world</string>
    <string name="login">登录</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="do_not_have_user">还没有账号? 马上注册!</string>
    <string name="register">注册</string>
    <string name="txt_phone_number">1.填写手机号</string>
    <string name="txt_verifyCode">2.输入验证码</string>
    <string name="txt_set_password">3.设置密码</string>
    <string name="get_verifyCode">获取验证码</string>
    <string name="agree">我已阅读并同意</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="user_agreement_title">用户协议</string>
    <string name="verifyCode_to_number">验证码短信已发送到</string>
    <string name="verifyCode">验证码</string>
    <string name="new_password">新密码</string>
    <string name="miao">59s</string>
    <string name="send_verifyCode">提交验证码</string>
    <string name="commit">提交</string>
    <string name="password_prompt">请输入6-16位密码，区分大小写</string>
    <string name="password_register">密码</string>
    <string name="complete_register">完成注册</string>
    <string name="confirm">确定</string>
    <string name="hint_nick_name">昵称（3到24个字符）</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="choice_agreement">您必须同意云瞳《用户协议》 才能进行下一步操作！</string>
    <string name="please_edit_phone">请输入合法手机号</string>
    <string name="clean_cache_success">清除缓存成功！</string>
    <string name="persional_title_info">完善资料</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_header_last_time">最后更新时间 : </string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <string name="collection">收藏</string>
    <string name="collectioned">取消收藏</string>
    <string name="mycollectioned">我的收藏</string>
    <string name="myhere">我的Here</string>
    <string name="mycomment">我的评论</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载...</string>
    <string name="nomore_loading">没有更多了</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="city">城市选择</string>
    <string name="different_pwd">两次密码输入不一致，请重新输入。</string>
    <string name="error_pwd">密码错误!</string>
    <string name="num_pwd">输入6-16位新密码!</string>
    <string name="num_pwd2">请输入6-16位密码!</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="ones_more">再按一次退出</string>
    <string name="feedback">意见反馈</string>
    <string name="say_something">说点什么吧，表示你来过</string>
    <string name="old_pwd">输入原密码</string>
    <string name="new_pwd">输入6-16位新密码，区分大小写</string>
    <string name="confirm_pwd">确认新密码</string>
    <string name="confirm_modify">确认修改</string>
    <string name="music">全局音乐背景</string>
    <string name="ganying">全局重力感应</string>
    <string name="fankui">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="agreement_txt">用户协议</string>
    <string name="version_update">版本更新</string>
    <string name="xiugai">修改密码</string>
    <string name="edit">写上您的宝贵意见</string>
    <string name="folder_name">FolderName</string>
    <string name="image_num">ImageNum</string>
    <string name="all_folder">选择相册</string>
    <string name="sheet">sheet</string>
    <string name="shoot">shoot</string>
    <string name="picture">照片</string>
    <string name="finish">完成</string>
    <string name="temp_date">2015-4-1</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">最多只能选择9张图片</string>
    <string name="open_camera_fail">相册初始化失败!</string>
    <string name="empty_sdcard">没有SD卡</string>
    <string name="here_detail">here详情</string>
    <string name="image_index">%1$d/%2$d</string>
    <string name="done">完成</string>
    <string name="unmessaged">未读消息</string>
    <string name="allmessaged">所有消息</string>
    <string name="sayhello">打个招呼吧</string>
    <string name="insert_card">插入卡</string>
    <string name="down_fail">下载失败</string>
    <string name="is_downing">正在下载</string>
    <string name="down_sucess">下载成功</string>
    <string name="triargin">请60s后重试!</string>



    <string name="agreement">《云瞳用户服务协议》云瞳数字科技有限公司（以下简称"云瞳"）为手机端“Here”APP的开发者、运营者和所有者（“Here”APP以下统称“本站”）。本协议是用户您就本站服务等相关事宜所订立的契约，请仔细阅读本协议。您在本站注册成为用户即代表您已确认和接受本协议的全部条款，本协议即构成对双方有约束力的法律文件。\n
        第一条    用户注册\n
        1.1. 用户注册是指用户登录本站，按要求填写相关信息并确认同意履行本协议的过程。用户因进行交易、获取有偿服务等而发生的所有应纳税赋由用户自行承担责任。\n
        1.2. 本站用户必须是具有完全民事行为能力的自然人，或者是具有合法经营资格的实体组织。无民事行为能力人、限制民事行为能力人以及无经营或特定经营资格的组织不当注册为本站用户或超过其民事权利能力或民事行为能力范围与本站进行交易的，本协议及其与Here之间就本站服务等相关事宜订立的其他协议自始无效，一经发现，本站有权立即停止与该用户的交易、注销该用户，并追究其使用本站服务的一切法律责任。\n
        第二条    用户的权利和义务\n
        2.1. 用户在使用本站服务时应遵守所有适用的中国法律、法规、规章和地方性法规、规章的要求。用户还必须确保遵守本协议及纳入本协议的所有其他条款和规则的规定。\n
        2.2. 用户在本站注册时，可自行创建昵称。用户名和昵称的命名及使用应遵守相关法律法规并符合网络道德。用户有权使用其在本站的用户名及密码登录本站。用户不得以任何形式转让或授权他人使用自己的本站用户名及密码, 否则用户应承担由此产生的全部责任，并与实际使用人承担连带责任。\n
        2.3. 用户有权根据本协议的规定以及本站上发布的相关规则在本站上查询推荐信息、发表推荐和评论、参与社区讨论、邀请关注好友、上传图片、参加本站的有关活动，以及享受本站提供的其它信息服务。\n
        2.4. 用户应保证其提供的注册资料真实、准确、完整、合法有效，用户注册资料如有变动的，应在相关资料实际变更时及时更新有关注册资料。用户保证不得以他人资料在本站注册和进行任何交互行为。如果用户提供的注册资料不合法、不真实、不准确、不详尽的，用户需承担因此引起的相应责任及后果，本站有权立即停止与该用户的交易、注销该用户。\n
        2.5. 用户不得通过任何手段恶意注册本站账号，包括但不限于以牟利、炒作、套现、获奖等为目的多个账号注册。用户亦不得盗用其他用户账号。如用户违反上述规定，本站有权采取一切必要的措施，包括但不限于删除用户发布的内容、停止与该用户的交易、注销该用户等。\n
        2.6. 用户应当保证在使用本站阅读推荐文章、发表信息、上传图片或购买商品过程中遵守诚实信用原则，对商户发表的推荐、评论等信息和图片应客观、真实，且基于亲身体验。用户不得在使用本站服务和购买商品过程中采取任何不正当行为，包括但不限于：炒作商户，向商户收取费用或获取利益；为获得利益或好处，参与或组织撰写及发布虚假评论；以差评威胁，要求商户提供额外的利益或好处。用户不得扰乱本站讨论区和网上交易的正常秩序。如用户违反上述规定，本站有权采取一切必要的措施，包括但不限于删除用户发布的内容、停止与该用户的交易、注销该用户等。\n
        2.7. 用户享有言论自由权利；并拥有适度修改、删除自己发表的文章的权利（用户与Here之间另有其他协议作出相反约定的除外）。用户不得在本站发表包含以下内容的言论：\n
        (1) 煽动抗拒、破坏宪法和法律、行政法规实施的；\n
        (2) 煽动颠覆国家政权，推翻社会主义制度的；\n
        (3) 煽动分裂国家，破坏国家统一的；\n
        (4) 煽动民族仇恨、民族歧视，破坏民族团结的；\n
        (5) 任何包含对种族、性别、宗教、地域内容等歧视的；\n
        (6) 捏造或者歪曲事实，散布谣言，扰乱社会秩序的；\n
        (7) 宣扬封建迷信、淫秽、色情、赌博、暴力、凶杀、恐怖、教唆犯罪的；\n
        (8) 公然侮辱他人或者捏造事实诽谤他人的，或者进行其他恶意攻击的；\n
        (9) 损害国家机关信誉的；\n
        (10) 其他违反宪法和法律行政法规的。\n
        本站保有删除在本站发表的各类不符合法律政策或不真实的信息内容而无须通知用户的权利。\n
        2.8. 用户在进行发表推荐和评论、参与讨论和上传图片等活动时，除遵守本协议条款外，还应遵守本站相关讨论区的特殊规定。\n
        2.9. 未经本站同意，用户不得在本站发布任何形式的广告，一经发现，本站有权采取暂停或关闭用户账号等措施，且用户应就该等事项承担全部法律责任。\n
        第三条    本站的权利和义务\n
        3.1. Here将在可行的范围内在现有技术上维护本站的正常运行，并努力提升和改进技术，使用户网上交易活动得以顺利进行。但本条不构成对本站服务的适用性、持续性、可靠性、准确性的任何声明、保证或承诺。\n
        3.2. 对用户在注册使用本站时所遇到的与交易或注册有关的问题及反映的情况，本站应及时作出回复。\n
        3.3. 对于用户在使用本站过程中的不当行为或其它任何本站认为应当终止服务的情况，本站有权随时作出删除相关信息、终止提供服务等处理，而无须征得用户的同意，且不需对用户或任何无直接关系的第三方负责。\n
        第四条    服务的修改、中断和终止\n
        4.1. 本站可以在没有特殊通知的情况下自行变更本协议的任何条款和条件、本站的其他规则或用户资格的任何规定。对这些协议和规则的修改一经公布即刻生效。如果任何变更被认定为无效、废止或因任何原因不可执行，则该变更是可分割的，且不影响其它变更或条件的有效性或可执行性。在变更这些条款和条件后，用户对本站的继续使用即构成用户对变更的接受。
        4.2. 即使本站没有要求或强制用户严格遵守本协议的任何条款，也并不构成对本站对本协议下任何权利的放弃。\n
        4.3. 如用户向本站提出注销注册用户身份，经本站审核同意，由本站注销该注册用户，用户即解除与本站的服务协议关系。但注销该用户账号后，本站仍保留下列权利：\n
        (1) 用户注销后，本站有权保留该用户的注册数据、收藏和推荐数据、及以前的交易行为记录；\n
        (2) 用户注销后，如用户在注销前在本站交易平台上存在违法行为或违反合同的行为或其在本协议项下的义务尚未履行完毕的，本站仍可行使本协议所规定的权利并保留依据适用的法律法规追究其法律责任的权利。\n
        4.4. 在下列情况下，本站可以通过注销用户的方式终止服务：\n
        (1) 在用户违反本协议相关规定时，本站有权终止向该用户提供服务。如该用户在本站终止提供服务后，再一次直接或间接或以他人名义注册为本站用户的，本站有权再次单方面终止向该用户提供服务；\n
        (2) 如本站通过用户提供的信息与用户联系时，发现用户在注册时填写的电子邮箱已不存在或无法接收电子邮件的，经本站以其它联系方式通知用户更改，而用户在三个工作日内仍未能提供新的电子邮箱地址的，本站有权终止向该用户提供服务；\n
        (3) 一经本站发现用户注册数据中主要内容是虚假的，本站有权随时终止向该用户提供服务；\n
        (4) 本协议终止或更新时，用户明示不愿接受新的服务协议的；\n
        (5) 其它本站认为需终止服务的情况。\n
        4.5. 本站可以不经通知而自行决定终止用户的会员资格。如果用户在本站的账号被注销，那么也将丧失相应的会员资格。对于该用户会员资格的丧失，用户对本站不能主张任何权利或为此索赔。\n
        第五条    适用的法律和管辖权\n
        用户和本站之间的契约将适用中华人民共和国的法律，所有的争端将诉诸于Here所在地的人民法院。\n
        第六条    知识产权\n
        6.1. 本站上的图表、标识、网页页眉、按钮图标、文字、服务品名等信息都是Here的财产，受中国和国际知识产权法的保护。未经本站许可，用户不得以任何可能引起消费者混淆的方式或任何贬低或诽谤Here的方式用于非本站的任何商品或服务上。在本站上出现的不属于上述主体的所有其他商标是其商标权利人各自的财产，这些权利人可能是也可能不是与Here相关联、相联系或由Here的关联公司赞助的。未经Here或相关商标所有人的书面许可，本站上的任何信息都不应被解释为以默许或其他方式授予他人使用本站上出现的商标的权利。\n
        6.2. Here拥有本站内容及资源的著作权，受国家知识产权相关法律法规保护，享有对本站各种协议、声明的修改权；未经Here的明确书面许可，用户不得为任何与本协议项下用户服务无关的目的获取或使用本站的任何部分或通过本站可直接或间接获得的任何内容、服务或资料。用户违反本协议的规定以任何方式，和/或以任何文字对本站的任何部分进行发表、复制、转载、更改、引用、链接、下载或以其他方式进行使用，或向任何第三方提供获取本站任何内容的渠道，则本站有权对用户采取一切必要的措施，包括但不限于删除用户发布的内容、暂停或注销该用户，取消及收回用户因违规所获利益，终止本协议，及通过诉讼形式追究用户的法律责任等，且用户需促使任何第三方按照Here的要求，归还或销毁使用Here平台任何部分的内容所创建的资料的任何副本。\n
        6.3. 本站用户发表的文章或评论仅代表作者本人观点，与本站立场无关，并不表示本站赞同其观点或证实其描述，本站不承担用户发表的信息引发的任何法律责任。\n
        6.4. 任何用户接受本协议，即表明该用户主动将其在任何时间段在本站发表的任何形式的信息的著作财产权，包括并不限于：复制权、发行权、出租权、展览权、表演权、放映权、广播权、信息网络传播权、摄制权、改编权、翻译权、汇编权等，以及应当由著作权人享有的其他可转让权利无偿独家转让给Here所有，同时表明该用户许可Here有权利就任何主体侵犯上述权利而单独提起诉讼，并获得全部赔偿。本协议已经构成《著作权法》第二十五条所规定的书面协议，其效力及于用户在本站发布的任何受著作权法保护的作品内容，无论该内容形成于本协议签订前还是本协议签订后。\n
        6.5. 任何转载、引用发表于本站的版权文章须符合以下规范：\n
        (1) 用于非商业、非盈利、非广告性目的时需注明作者及文章及图片的出处为"Here"；\n
        (2) 用于商业、盈利、广告性目的时需征得文章或图片原作者的同意，并注明作者姓名、授权范围及原作出处"Here"；\n
        (3) 任何文章或图片的修改或删除均应保持作者原意并征求原作者同意，并注明授权范围。\n
        第七条    不承诺担保和责任限制\n
        7.1. 除非另有明确的书面说明，本站及其所包含的或以其它方式通过本网站提供给用户的全部信息、内容、材料、商品（包括软件）和服务，是由Here在"按现状"和"按现有"的基础上提供的。\n
        7.2. 除非另有明确的书面说明, Here不对本站的运营及其包含在本站上的信息、内容、材料、商品(包括软件)或服务作任何形式的、明示或默示的声明或担保（除根据中华人民共和国法律规定的以外）。用户明确同意自担风险使用本站。\n
        7.3. 在适用法律所允许的最大限度内 ，Here不承诺所有明示或默示的担保，包括但不限于对适销性和满足特定目的的默示担保。Here不担保本站、其所包含的或以其它方式通过本站提供给您的全部信息、内容、材料、商品（包括软件）和服务、其服务器或从本站发出的电子信件没有病毒或其他有害成分。\n
        7.4. 除非另有明确的书面说明，在中国法律法规所允许的限度内，对于使用本站、或由于其所包含的或以其它方式通过本站提供给用户的全部信息、内容、材料、商品（包括软件）和服务、或购买和使用商品引起或与之有关的任何直接的、间接的、特殊的、附带的、后果性的或惩罚性的损害，或任何其它性质的损害，本站、本站的董事、管理人员、雇员、代理或其它代表在任何情况下都不承担责任。这些责任排除和限制条款将在法律所允许的最大限度内适用，并在用户资格被撤销或终止后仍继续有效。\n
        第八条    隐私\n
        8.1. 本站收集到的用户数据包括但不限于：\n
        (1) 在本站进行用户注册时，用户根据本站要求提供的个人注册信息；\n
        (2) 在用户使用本站服务、参加本站活动，或访问本站网页时，本站自动接收并记录的用户浏览器端或手机客户端数据，包括但不限于IP地址、网站Cookie等数据及用户要求取用的网页记录；\n
        (3) 本站收集到的用户在本站购物及发布信息等的有关数据，包括但不限于购物记录、上传的图片、发表的推荐和评论、发布的商品使用体验、商品讨论、邀请关注好友和留言等数据。\n
        (4) 本站通过合法途径从商业伙伴处取得的用户个人数据。\n
        8.2. 信息使用：\n
        (1) 本站不会向任何人出售或出借用户的个人信息，除非事先得到用户的许可。\n
        (2) 本站亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播用户的个人信息。任何用户如从事上述活动，一经发现，本站有权立即终止与该用户的服务协议，查封其账号。\n
        8.3. 为服务用户的目的，本站可能通过使用用户的个人信息，向用户提供服务，包括但不限于向用户发出商品和服务信息，或者与本站合作伙伴共享信息以便他们向用户发送有关其商品和服务的信息（后者需要用户的事先同意）。\n
        8.4. 信息披露；用户的个人信息将在下述情况下部分或全部被披露：\n
        (1) 经用户同意，向第三方披露；\n
        (2) 如用户是合资格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷；\n
        (3) 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；\n
        (4) 如果用户出现违反中国有关法律或者网站政策的情况，需要向第三方披露；\n
        (5) 为提供用户所要求的商品和服务，而必须和第三方分享用户的个人信息；\n
        (6) 其它本站根据法律或者网站政策认为合适的披露。\n
        8.5. 信息安全：\n
        (1) 请妥善保管用户的用户名及密码信息；在使用本站服务进行网上购物时，请用户妥善保护自己的个人信息，仅在必要的情形下向他人提供；\n
        (2) 如果用户发现自己的个人信息泄密，尤其是本站用户名及密码或提现密码发生泄露，请用户立即联络本站客服，以便本站采取相应措施。\n
        第九条    其他\n
        9.1. 本协议将对用户持续有效，有效期至用户注销或者被取消账号、且停止一切使用本站服务的行为后，但本站与用户间已经产生的权利义务，仍对双方有约束力。\n
        9.2. Here将视向用户所提供服务内容之特性，要求用户在注册本站提供的有关服务时，遵守特定的条件和条款；如该特定条件和条款与以上服务条款有任何不一致之处，则以特定条件和条款为准。\n
        9.3. 本协议中的任何条款无论因何种原因完全或部分无效或不具有执行力，其余条款仍应有效并且有约束力。\n
        9.4. 本协议的标题、序号均为方便阅读而设定，不影响条款实际含义及其效力。\n
        9.5. 本协议自公布及适用的当天生效，有效期持续至更新版本发布之时。\n
        9.6. 如双方就本协议内容或其执行发生任何争议，双方应尽力友好协商解决；协商不成时，任何一方均可向Here所在地的人民法院提起诉讼。\n
        9.7. Here在法律允许的最大范围内对本协议拥有解释权与修改权。用户如有任何需要说明本协议条款的要求，请联系本站客服。\n
</string>

</resources>
