<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg">

    <include layout="@layout/title_top"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/login_name"
        android:textSize="18sp"
        android:textColor="@color/green"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="48dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_phone"/>

        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_marginLeft="46dp"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:textSize="16sp"
            android:maxLength="11"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_black"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_password"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="46dp"
            android:background="@null"
            android:hint="@string/password"
            android:maxLength="16"
            android:inputType="textPassword"
            android:digits=",.!@#$%0123456789abcdefghijgklmnopqrstuvwxyzABCDEFGHIJGKLMNOPQRSTUVWXYZ"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_black"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:textColor="@color/gray_white"
        android:background="@drawable/button_bg_selector"
        android:textSize="16sp"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginTop="17dp">

        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dp"
            android:hint="@string/forgot_password"
            android:textColorHint="@color/gray_black"
            android:textSize="14sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_centerVertical="true"
            android:hint="@string/do_not_have_user"
            android:textSize="14sp"
            android:textColorHint="@color/gray_black"/>
        
        <Button
            android:id="@+id/btn_register"
            android:layout_width="96dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="24dp"
            android:text="@string/register"
            android:textColor="@color/gray_white"
            android:background="@drawable/button_register_selector"/>
    </RelativeLayout>

</LinearLayout>
