<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg">

    <include layout="@layout/title_top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_phone_number"
            android:layout_gravity="center_vertical"
            android:textColor="@color/green"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="38dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:background="@color/green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/txt_verifyCode"
            android:layout_gravity="center_vertical"
            android:textColor="@color/green"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="38dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:background="@color/green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_set_password"
            android:textColor="@color/green"
            android:textSize="12sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/password_prompt"
        android:textColor="@color/gray_black"
        android:textSize="12sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="27dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_password"/>

        <EditText
            android:id="@+id/edt_register_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_marginLeft="46dp"
            android:hint="@string/password_register"
            android:inputType="textPassword"
            android:digits=",.!@#$%0123456789abcdefghijgklmnopqrstuvwxyzABCDEFGHIJGKLMNOPQRSTUVWXYZ"
            android:maxLength="16"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_black"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_complete_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="72dp"
        android:text="@string/complete_register"
        android:textColor="@color/gray_white"
        android:textSize="16sp"
        android:background="@drawable/button_bg_selector"/>

</LinearLayout>
