<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg">

    <include layout="@layout/title_top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_phone_number"
            android:layout_gravity="center_vertical"
            android:textColor="@color/green"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="38dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:background="@color/gray_black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/txt_verifyCode"
            android:layout_gravity="center_vertical"
            android:textColor="@color/gray_black"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="38dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:background="@color/gray_black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_set_password"
            android:textColor="@color/gray_black"
            android:textSize="12sp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="75dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_phone"/>

        <EditText
            android:id="@+id/edt_register_phone_number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="46dp"
            android:background="@null"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLength="11"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_black"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_get_verifyCode"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="72dp"
        android:text="@string/get_verifyCode"
        android:textColor="@color/gray_white"
        android:textSize="16sp"
        android:background="@drawable/button_bg_selector"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="17dp">

        <LinearLayout
            android:id="@+id/linear_gou"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/register_btn_bg"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/img_gou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_agreement_gou"/>
        </LinearLayout>


        <TextView
            android:layout_toRightOf="@+id/linear_gou"
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:layout_marginLeft="16dp"
            android:textColor="@color/gray_black"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/txt_user_agreement"
            android:layout_toRightOf="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="@color/green"
            android:textSize="12sp"/>


    </RelativeLayout>

</LinearLayout>
